# minimal-task-scheduler

./: Cargo.toml  README.md  docker-compose.yaml  pulsar.yml
example_configuration_file/: config.toml
src/: config.rs  consumer.rs  error.rs  main.rs  producer.rs
