[package]
name = "workload-scheduler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "3.2.11", features = ["derive"] }
env_logger = "0.10.0"
rand = "0.8.5"
rdkafka = "0.34.0"
toml = "0.5"
log = "0.4.8"
serde = { version = "1.0.0", features = ["derive"] }
serde_derive = "1.0.0"
serde_json = "1.0.0"
tokio = { version = "1.32.0", features = ["full"] }
warp = "0.3.6"
